# pagebuilder

./: README.md  generate.py  preview.sh  pyproject.toml  requirements.txt  watcher.py
.github/workflows/: ci.yaml  deploy-pages.yaml
data/templates/: bare_template.html
src/pagebuilder/: __init__.py  __main__.py  builder.py  cli_s.py  watcher.py
